2008-06-24  Laurent Debacker <debackerl@gmail.com> 

	* ApplicationMenu.cs: Size requisition for app menu

2008-06-24  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Fix background theme for Quick Access Toolbar when there is no
	  app button

2008-06-23  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Quick Access Toolbar background
	* ApplicationMenu.cs: Initial stub API for application menu.
	* QuickAccessToolbar.cs: Take care of height requests from children widgets

2008-06-22  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Title bar's background is not compliant
	* Ribbon.cs: Fix title bar layout code

2008-06-22  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Implementation of the required drop shadow for the app button

2008-06-22  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Change background color depending on current state
	* Ribbon.cs: Bugfix for layout code
	* ApplicationButton.cs: Bugfix for widget initialization

2008-06-22  Laurent Debacker <debackerl@gmail.com> 

	* QuickAccessToolbar.cs: Bugfix, add NO_WINDOW flag
	* Theme.cs: Implement final app button theme
	* Ribbon.cs: Bugfix, call app button and quick access toolbar when calling
	  children

2008-06-19  Laurent Debacker <debackerl@gmail.com> 

	* QuickAccessToolbar.cs: Implement size request and size allocation.

2008-06-06  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Stub for the application button.
	* Ribbon.cs: Support for the application button.
	* ApplicationButton.cs: Initial commit.

2008-06-05  Laurent Debacker <debackerl@gmail.com> 

	* Ribbon.cs: 
	
	  * More work a the layout of the QuickAccessToolbar
	
	* QuickAccessToolbar.cs: 
	
	  * Add minimal code to be able to use it as a child widget in the demo.
	
	* Theme.cs: 
	
	  * Drawing of the QuickAccessToolbar's background.

2008-06-01  Laurent Debacker <debackerl@gmail.com> 

	* Ribbon.cs: 
	
	  * Add new Toolbar property to control the QuickAccessToolbar that
	  belongs to a Ribbon.
	